objects/Deployment_Flow_Step__c.object
<CustomObject>
    <fields>
        <fullName>Automatically_Merge_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Merge and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Flow__c</fullName>
        <label>Deployment Flow</label>
        <referenceTo>Deployment_Flow__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps (Destination Environment)</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Git_State__c</fullName>
        <description>Placeholder for git status of this Deployment Flow Step</description>
        <formula>&apos;(coGitState_&apos; &amp; CASESAFEID(Id)&amp;&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Git State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Deployment Flow Steps</relationshipLabel>
        <relationshipName>Deployment_Flow_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Level__c</fullName>
        <inlineHelpText>Test Level must be set to &quot;Run Local Tests&quot;</inlineHelpText>
        <label>Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Test Run</fullName>
                </value>
                <value>
                    <fullName>Run Specified Tests</fullName>
                </value>
                <value>
                    <fullName>Run Local Tests</fullName>
                    <default>true</default>
                    <label>Run Local Tests</label>
                </value>
                <value>
                    <fullName>Run All Tests In Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Flow Step</label>
    <nameField>
        <displayFormat>DFS-{000000}</displayFormat>
        <label>Deployment Flow Step Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>